# holochain-realworld-example-app

./: .gitignore
backend/: conductor-config.toml  update_hash.sh
backend/test/: index.js
backend/zomes/store/: zome.json
backend/zomes/store/code/: .hcbuild  Cargo.toml
backend/zomes/store/code/src/: articles.rs  author.rs  lib.rs  profile.rs  types.rs  user.rs
middleware/: Cargo.toml  build_tests.sh
middleware/docs/: mkdocs.yml  ws.md
middleware/docs/docs/: connect.md  ws.md
middleware/src/lib/: hc_types.rs  lib.rs  types.rs
middleware/src/lib/rest/: articles.rs  auth.rs  mod.rs
middleware/src/lib/rest/articles/: handler.rs  mod.rs
middleware/src/lib/types/: mod.rs  spec_types.rs
middleware/src/lib/ws/: mod.rs  test.rs  tests.rs
types/: Cargo.toml
types/src/: lib.rs
