[package]
name = "types"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdk = "=0.0.38-alpha14"
chrono = { version = "0.4.6", features = ["serde"] }
validator = "0.10.0"
validator_derive = "0.10.0"
hdk_proc_macros = "=0.0.38-alpha14"
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"

